# libra

./: .gitignore  Cargo.toml  README.md  x.toml
.github/workflows/: ci-post-land.yml  ci-test.yml  ci-update-sccache.yml  ci.yaml  daily.yml  dep-update-review.yml  developer-site-ci.yml  integration.yaml  release.yaml  weekly.yml
api/: Cargo.toml
api/types/: Cargo.toml
config/: Cargo.toml
config/generate-key/: Cargo.toml
config/management/: Cargo.toml
config/management/genesis/: Cargo.toml
config/management/genesis/src/: storage_helper.rs
config/management/network-address-encryption/: Cargo.toml
config/management/operational/: Cargo.toml
config/seed-peer-generator/: Cargo.toml
consensus/: Cargo.toml
consensus/consensus-types/: Cargo.toml
consensus/safety-rules/: Cargo.toml
crates/diem-assets-proof/: Cargo.toml
crates/diem-bitvec/: Cargo.toml
crates/diem-client/: Cargo.toml
crates/diem-crypto/: Cargo.toml
crates/diem-crypto-derive/: Cargo.toml
crates/diem-faucet/: Cargo.toml
crates/diem-rest-client/: Cargo.toml
crates/diem-time-service/: Cargo.toml
crates/diem-wallet/: Cargo.toml
crates/diem-workspace-hack/: Cargo.toml
crates/fallible/: Cargo.toml
crates/short-hex-str/: Cargo.toml
crates/swiss-knife/: Cargo.toml
diem-move/df-cli/: Cargo.toml
diem-move/diem-events-fetcher/: Cargo.toml
diem-move/diem-framework/: Cargo.toml
diem-move/diem-framework/DPN/releases/: Cargo.toml
diem-move/diem-framework/experimental/demo-cli/: Cargo.toml
diem-move/diem-framework/experimental/releases/: Cargo.toml
diem-move/diem-framework/releases/: Cargo.toml
diem-move/diem-resource-viewer/: Cargo.toml
diem-move/diem-transaction-benchmarks/: Cargo.toml
diem-move/diem-transactional-test-harness/: Cargo.toml
diem-move/diem-validator-interface/: Cargo.toml
diem-move/diem-vm/: Cargo.toml
diem-move/e2e-tests/: Cargo.toml
diem-move/e2e-tests-replay/: Cargo.toml
diem-move/e2e-testsuite/: Cargo.toml
diem-move/genesis-viewer/: Cargo.toml
diem-move/transaction-builder-generator/: Cargo.toml
diem-move/transaction-replay/: Cargo.toml
diem-move/vm-genesis/: Cargo.toml
diem-move/writeset-transaction-generator/: Cargo.toml
diem-node/: Cargo.toml
docker/ci/alpine/: Dockerfile
docker/ci/arch/: Dockerfile
docker/ci/github/: Dockerfile
docker/client/: Dockerfile
docker/cluster-test/: Dockerfile
docker/faucet/: Dockerfile
docker/init/: Dockerfile
docker/safety-rules/: Dockerfile
docker/tools/: Dockerfile
docker/validator/: Dockerfile
execution/db-bootstrapper/: Cargo.toml
execution/execution-correctness/: Cargo.toml
execution/executor/: Cargo.toml
execution/executor-benchmark/: Cargo.toml
execution/executor-types/: Cargo.toml
json-rpc/: Cargo.toml
json-rpc/integration-tests/: Cargo.toml
json-rpc/types/: Cargo.toml
language/diem-framework/modules/0L/: Demos.move  MinerState.move  Subsidy.move
language/move-lang/functional-tests/tests/0L/subsidy/: fullnode_subsidy_calc.move
language/stdlib/compiled/stdlib/: 034_MinerState.mv  040_LibraAccount.mv  046_Subsidy.mv  053_Genesis.mv
language/stdlib/modules/0L/: LibraAccount.move
language/stdlib/modules/doc/: LibraAccount.md
mempool/: Cargo.toml
network/: Cargo.toml
network/builder/: Cargo.toml
network/discovery/: Cargo.toml
ol-framework/: Move.toml
ol-framework/sources/: hello_blockchain.move  util.move
ol/cli/: Cargo.toml
ol/genesis-tools/: Cargo.toml
ol/keys/src/: scheme.rs  wallet.rs
ol/onboard/: Cargo.toml
ol/smoke-tests/: Cargo.toml
ol/tower/: Cargo.toml
ol/txs/: Cargo.toml
ol/types/: Cargo.toml
ol/util/: Cargo.toml
sdk/: Cargo.toml
sdk/compatibility/: Cargo.toml
sdk/offchain/: Cargo.toml
sdk/transaction-builder/: Cargo.toml
secure/key-manager/: Cargo.toml
secure/net/: Cargo.toml
secure/storage/: Cargo.toml
secure/storage/github/: Cargo.toml
secure/storage/vault/: Cargo.toml
shuffle/cli/: Cargo.toml
shuffle/move/: Cargo.toml
state-sync/: Cargo.toml
state-sync/diem-data-client/: Cargo.toml
state-sync/inter-component/consensus-notifications/: Cargo.toml
state-sync/inter-component/event-notifications/: Cargo.toml
state-sync/inter-component/mempool-notifications/: Cargo.toml
state-sync/state-sync-v1/: Cargo.toml
state-sync/state-sync-v2/data-streaming-service/: Cargo.toml
state-sync/state-sync-v2/state-sync-driver/: Cargo.toml
state-sync/storage-service/client/: Cargo.toml
state-sync/storage-service/server/: Cargo.toml
state-sync/storage-service/types/: Cargo.toml
storage/backup/backup-cli/: Cargo.toml
storage/backup/backup-service/: Cargo.toml
storage/diemdb/: Cargo.toml
storage/jellyfish-merkle/: Cargo.toml
storage/storage-client/: Cargo.toml
storage/storage-interface/: Cargo.toml
storage/storage-service/: Cargo.toml
testsuite/diem-fuzzer/: Cargo.toml
testsuite/forge/: Cargo.toml
testsuite/generate-format/: Cargo.toml
testsuite/smoke-test/: Cargo.toml
testsuite/testcases/: Cargo.toml
transactional_tests/: Cargo.toml
types/: Cargo.toml
vm-validator/: Cargo.toml
