[package]
name = "diem-management"
version = "5.2.0" #/////// 0L /////////
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Management is a tool used to manage the configuration of a Diem Node"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
hex = "0.4.3"
serde = { version = "1.0.124", features = ["rc"], default-features = false }
serde_yaml = "0.8.17"
structopt = "0.3.21"
thiserror = "1.0.37"
toml = { version = "0.5.8", default-features = false }

bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
diem-config = { path = ".."}
diem-crypto = { path = "../../crates/diem-crypto" }
diem-global-constants = { path = "../global-constants"}
diem-network-address-encryption = {path = "network-address-encryption"}
diem-secure-storage = { path = "../../secure/storage" }
diem-time-service = { path = "../../crates/diem-time-service" }
diem-types = { path = "../../types" }
diem-workspace-hack = { version = "0.1", path = "../../crates/diem-workspace-hack" }
diem-temppath = { path = "../../crates/diem-temppath" }
diem-transaction-builder = { path = "../../sdk/transaction-builder" }

# //////// 0L ////////
rustyline = "6.2.0"
diem-wallet = { path = "../../crates/diem-wallet", version = "0.1.0"}
ol-keys = { path = "../../ol/keys",  version = "0.1.0" }
dirs = "2.0.2"
serde_json = "1"

[dev-dependencies]
diem-config = { path = "..", features = ["fuzzing"] }

[features]
testing = []
fuzzing = ["diem-config/fuzzing"]
