[package]
name = "diem-assets-proof"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Proof-of-Assets CLI"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
structopt = "0.3.21"

bcs = "0.1.2"
diem-client = { path = "../diem-client", features = ["blocking"], default-features = false }
diem-crypto = { path = "../diem-crypto" }
diem-types = { path = "../../types" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "a22226aae916ff2d0ac530e838d7522d044ead1f" }
diem-workspace-hack = { version = "0.1", path = "../diem-workspace-hack" }
