[package]
name = "df-cli"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "CLI frontend for the Move compiler and VM (with Diem Framework)"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.2"
structopt = "0.3.21"

diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-cli = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
diem-vm = { path = "../diem-vm" }
diem-framework-releases = { path = "../../diem-move/diem-framework/DPN/releases" }

[dev-dependencies]
datatest-stable = "0.1.1"

[[bin]]
name = "df-cli"
path = "src/main.rs"

[[test]]
name = "cli_testsuite"
harness = false
