[package]
name = "diem-framework"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
move-bytecode-verifier = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-abigen = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-docgen = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-command-line-common = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-errmapgen = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-compiler = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-prover = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
transaction-builder-generator = { path = "../transaction-builder-generator" }
move-stdlib = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-symbol-pool = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-vm-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-vm-runtime = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-package = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-bytecode-utils = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }

bcs = "0.1.2"
anyhow = "1.0.52"
clap = "2.33.3"
log = "0.4.14"
rayon = "1.5.0"
sha2 = "0.9.3"
once_cell = "1.7.2"
smallvec = "1.6.1"
structopt = "0.3.21"
include_dir = "0.6.0"
tempfile = "3.2.0"

[dev-dependencies]
datatest-stable = "0.1.1"
diem-vm = { path = "../../diem-move/diem-vm" }
move-cli = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-unit-test = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
diem-transactional-test-harness = { path = "../diem-transactional-test-harness" }

dir-diff = "0.3.2"

[features]
default = []
fuzzing = ["diem-types/fuzzing"]

[[test]]
name = "transactional_tests"
harness = false

#/////// 0L /////////
[[test]]
name = "ol_transactional_tests"
harness = false