[package]
name = "diem-framework"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
move-bytecode-verifier = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-abigen = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-docgen = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-command-line-common = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-errmapgen = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-compiler = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-prover = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
transaction-builder-generator = { path = "../transaction-builder-generator" }
move-stdlib = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-symbol-pool = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-vm-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-vm-runtime = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-package = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-bytecode-utils = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }

bcs = "0.1.2"
anyhow = "1.0.52"
clap = "2.33.3"
log = "0.4.14"
rayon = "1.5.0"
sha2 = "0.9.3"
once_cell = "1.7.2"
smallvec = "1.6.1"
structopt = "0.3.21"
include_dir = "0.6.0"
tempfile = "3.2.0"

[dev-dependencies]
datatest-stable = "0.1.1"
diem-vm = { path = "../../diem-move/diem-vm" }
move-cli = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
move-unit-test = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "92f8d3fdb179137bebdc6104ea2c638976eb0511" }
diem-transactional-test-harness = { path = "../diem-transactional-test-harness" }

dir-diff = "0.3.2"

[features]
default = []
fuzzing = ["diem-types/fuzzing"]

[[test]]
name = "transactional_tests"
harness = false

#/////// 0L /////////
[[test]]
name = "ol_transactional_tests"
harness = false