[package]
name = "diem-resource-viewer"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem resource viewer"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-resource-viewer = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
diem-types = { path = "../../types"  }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }

anyhow = "1.0.52"
