[package]
name = "genesis-viewer"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem genesis viewer"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bcs = "0.1.2"
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
diem-resource-viewer = { path = "../diem-resource-viewer"}
vm-genesis = { path = "../vm-genesis" }
diem-framework-releases = { path = "../../diem-move/diem-framework/DPN/releases" }
move-vm-test-utils = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }

structopt = "0.3.21"
