[package]
name = "diem-transaction-replay"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Replay transactions stored on chain"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
structopt = "0.3.21"
hex = "0.4.3"
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
diem-types = { path = "../../types" }
diem-state-view = { path = "../../storage/state-view" }
diem-validator-interface = { path = "../diem-validator-interface" }
diemdb = { path = "../../storage/diemdb" }
diem-vm = { path = "../diem-vm" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d"}
move-cli = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
move-vm-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
move-vm-runtime = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
move-vm-test-utils = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
diem-resource-viewer = { path = "../diem-resource-viewer" }
diem-framework = { path = "../../diem-move/diem-framework" }
move-compiler = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "3ad83bc1c4e1ceeabdcb0c2972c0e46dbe934d6d" }
bcs = "0.1.2"
difference = "2.0.0"

[dev-dependencies]
vm-genesis = { path = "../vm-genesis" }
diem-framework-releases = { path = "../../diem-move/diem-framework/DPN/releases" }
