[package]
name = "diem-writeset-generator"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generating writesets used for incident management"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
structopt = "0.3.21"
tempfile = "3.2.0"
handlebars = "3.5.3"
hex = "0.4.3"
serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
once_cell = "1.7.2"

move-bytecode-verifier = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
diem-crypto-derive = { path = "../../crates/diem-crypto-derive" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-types = { path = "../../types" }
diem-framework-releases = { path = "../../diem-move/diem-framework/DPN/releases" }
diem-framework = { path = "../../diem-move/diem-framework" }
move-compiler = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
diem-state-view = { path = "../../storage/state-view" }
diem-validator-interface = { path = "../diem-validator-interface" }
diem-transaction-replay = { path = "../transaction-replay" }
diemdb = { path = "../../storage/diemdb" }
diem-vm = { path = "../diem-vm" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806"}
move-vm-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-vm-runtime = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-vm-test-utils = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
read-write-set = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
#//////// 0L ///////
# cli = { path = "../../../testsuite/cli" }
diem-transaction-builder = { path = "../../sdk/transaction-builder" }
ol-types = { path = "../../ol/types" }
diem-resource-viewer = { path = "../diem-resource-viewer" }
move-resource-viewer = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }