[package]
name = "shuffle-custom-move-code"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
diem-framework = { path = "../../diem-move/diem-framework" }
diem-workspace-hack = { version = "0.1", path = "../../crates/diem-workspace-hack" }
diem-vm = { path = "../../diem-move/diem-vm" }
move-stdlib = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
move-unit-test = { git = "https://github.com/simsekgokhan/move-0L-v6", rev = "fe7ea743ef6fd13aaff46357667a28530dba203f" }
