[package]
name = "diem-data-client"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "The Diem data client"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
itertools = "0.10.0"
rand = "0.8.3"
serde = { version = "1.0.124", default-features = false }
thiserror = "1.0.37"

diem-config = { path = "../../config" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-id-generator = { path = "../../crates/diem-id-generator" }
diem-infallible = { path = "../../crates/diem-infallible" }
diem-logger = { path = "../../crates/diem-logger" }
diem-metrics = { path = "../../crates/diem-metrics" }
diem-time-service = { path = "../../crates/diem-time-service", features = ["async"] }
diem-types = { path = "../../types" }
diem-workspace-hack = { version = "0.1", path = "../../crates/diem-workspace-hack" }
network = { path = "../../network" }
storage-service-client = { path = "../storage-service/client" }
storage-service-types = { path = "../storage-service/types" }
storage-service-server = { path = "../storage-service/server" }

[dev-dependencies]
claim = "0.5.0"
maplit = "1.0.2"
tokio = { version = "1.8.1", features = ["rt", "macros"], default-features = false }

bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
channel = { path = "../../crates/channel" }
diem-time-service = { path = "../../crates/diem-time-service", features = ["async", "testing"] }
network = { path = "../../network", features = ["fuzzing"] }
