[package]
name = "generate-format"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem types"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde-reflection = "0.3.5"
serde_yaml = "0.8.17"
structopt = "0.3.21"

consensus = { path = "../../consensus", features=["fuzzing"] }
consensus-types = { path = "../../consensus/consensus-types", features=["fuzzing"] }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
diem-config = { path = "../../config" }
diem-crypto = { path = "../../crates/diem-crypto", features=["fuzzing"] }
diem-crypto-derive = { path = "../../crates/diem-crypto-derive"}
diem-types = { path = "../../types", features=["fuzzing"] }
diem-workspace-hack = { version = "0.1", path = "../../crates/diem-workspace-hack" }
network = { path = "../../network" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806", features=["fuzzing"] }

[[bin]]
name = "compute"
path = "src/compute.rs"
test = false
