[package]
name = "framework-releases"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
move-bytecode-verifier = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-compiler = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
diem-types = { path = "../../../types" }
diem-workspace-hack = { path = "../../../crates/diem-workspace-hack" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-vm-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-vm-runtime = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-bytecode-utils = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-command-line-common = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
move-package = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }

bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
anyhow = "1.0.52"
clap = "2.33.3"
log = "0.4.14"
rayon = "1.5.0"
sha2 = "0.9.3"
walkdir = "2.3.1"
once_cell = "1.7.2"
smallvec = "1.6.1"
structopt = "0.3.21"
include_dir = "0.6.0"
