[package]
name = "demo-cli"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
diem-json-rpc-types = { path = "../../../../json-rpc/types" }
diem-sdk = { path = "../../../../sdk" }
diem-transaction-builder = { path = "../../../../sdk/transaction-builder"}
diem-types = { path = "../../../../types" }
diem-workspace-hack = { path = "../../../../crates/diem-workspace-hack" }
generate-key = { path = "../../../../config/generate-key" }
move-core-types = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.52"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
log = "0.4.14"
rand = "0.8.3"
structopt = "0.3.21"
walkdir = "2.3.1"
hex = "0.4.3"
