[package]
name = "diem-experimental-framework-releases"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Experimental Framework Releases"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false


[dependencies]
move-command-line-common = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
diem-crypto = { path = "../../../../crates/diem-crypto" }
diem-types = { path = "../../../../types" }
diem-workspace-hack = { path = "../../../../crates/diem-workspace-hack" }
move-binary-format = { git = "https://github.com/simsekgokhan/move-0L", rev = "f75ad3d67de41be8d4989fa398abbcbcfdb67806" }
framework-releases = { path = "../../releases" }

anyhow = "1.0.52"
include_dir = "0.6.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
once_cell = "1.7.2"
